[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cstar"
version = "0.0.1"
authors = [
  { name="Matiiss", email="matiiss@matiiss.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
